--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fontsource/roboto": "^4.5.7",
     "@mui/material": "^5.8.2",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@react-spring/parallax": "^9.4.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,8 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.4.5",
+    "scroll-snap": "^4.0.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
